syntax = "proto3";

package order;

option java_package = "com.nils.gprc.order";
option java_multiple_files = true;

message OrderItem {
  string product_id = 1;
  int32 quantity = 2;
}

message OrderRequest {
  string customer_id = 1;
  string order_id = 2;
  repeated OrderItem order_items = 3;
}

message OrderResponse {
  string order_id = 1;
  string customer_id = 2;
  int32 order_amount = 3;
}

service OrderService {
  rpc createOrder (OrderRequest) returns (OrderResponse);
  rpc updateOrder (OrderRequest) returns (OrderResponse);
}